modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-processes/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8HostProcesses
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["ReplicationController"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    namespaceSelector:
      matchExpressions:
        - key: custom-policy
          operator: In
          values:
          - example
  parameters:
    allowHostPID: true
    allowHostIPC: true
