modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-processes/rendered/test_samples/pods/007-allowed-hostpid-true.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-hostpid-true
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    hostPID: true
