modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-host-processes/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-host-processes
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: allowed-no-hostpid-no-hostipc
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-allowed-no-hostpid-no-hostipc.yaml
        assertions:
          - violations: "no"
      - name: allowed-multiple-containers-no-hostpid-no-hostipc
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-allowed-multiple-containers-no-hostpid-no-hostipc.yaml
        assertions:
          - violations: "no"
      - name: disallowed-hostpid-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-disallowed-hostpid-true.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-hostipc-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-disallowed-hostipc-true.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-hostpid-true-hostipc-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-disallowed-hostpid-true-hostipc-true.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-no-exception-label-hostpid-true-hostipc-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-disallowed-no-exception-label-hostpid-true-hostipc-true.yaml
        assertions:
          - violations: "yes"
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: allowed-hostpid-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-allowed-hostpid-true.yaml
        assertions:
          - violations: "no"
      - name: allowed-hostipc-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-allowed-hostipc-true.yaml
        assertions:
          - violations: "no"
      - name: allowed-hostpid-true-hostipc-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-allowed-hostpid-true-hostipc-true.yaml
        assertions:
          - violations: "no"
      - name: allowed-no-hostpid-no-hostipc
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-allowed-no-hostpid-no-hostipc.yaml
        assertions:
          - violations: "no"
  - name: security-policy-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: allowed-by-exception-hostpid-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-allowed-by-exception-hostpid-true-inv-1.yaml
        object: test_samples/pods/011-allowed-by-exception-hostpid-true.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-hostipc-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-allowed-by-exception-hostipc-true-inv-1.yaml
        object: test_samples/pods/012-allowed-by-exception-hostipc-true.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-hostpid-true-hostipc-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-allowed-by-exception-hostpid-true-hostipc-true-inv-1.yaml
        object: test_samples/pods/013-allowed-by-exception-hostpid-true-hostipc-true.yaml
        assertions:
          - violations: "no"
      - name: allowed-by-exception-hostpid-false-hostipc-false
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/004-allowed-by-exception-hostpid-false-hostipc-false-inv-1.yaml
        object: test_samples/pods/014-allowed-by-exception-hostpid-false-hostipc-false.yaml
        assertions:
          - violations: "no"
      - name: disallowed-by-exception-hostpid-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-allowed-by-exception-hostpid-true-inv-1.yaml
        object: test_samples/pods/015-disallowed-by-exception-hostpid-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-by-exception-hostipc-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-allowed-by-exception-hostipc-true-inv-1.yaml
        object: test_samples/pods/016-disallowed-by-exception-hostipc-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-exception-allows-false-constraint-allows-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/004-allowed-by-exception-hostpid-false-hostipc-false-inv-1.yaml
        object: test_samples/pods/017-disallowed-exception-allows-false-constraint-allows-true.yaml
        assertions:
          - violations: "yes"
